--- a/templates/main.html
+++ b/templates/main.html
@@ -5,8 +5,12 @@
         It's very straightforward to create a new app to be integrated with <a href="http://%SITEURL%" target="_blank">%SITEURL%</a>. This guide will help you to dive into the necessary details and to get your first app quickly done.
     </p>
 
-    <p class="spaceapi-box spaceapi-box-note">
-        This guide is yet incomplete but it should give you already some useful information. It's best you clone from the <a href="https://github.com/SpaceApi/spaceapiapp_how-to-write-an-app-skeleton" target="_blank">app skeleton</a> repository. The whole website was developed by <a href="http://twitter.com/slopjong" target="_blank">@slopjong</a>, if you have questions just ask him for details.
+    <h3>Getting started</h3>
+
+    <p>Get the app framework and just follow <a href="https://github.com/SpaceApi/app-framework" target="_blank">this guideline</a> for the setup.</p>
+
+    <p>
+        If there are still questions after reading the guideline, just ask <a href="http://twitter.com/slopjong" target="_blank">@slopjong</a> who developed the whole website.
     </p>
 
     <h3>Create the directory structure</h3>
@@ -59,7 +63,7 @@
         <tr>
             <td>appname.html</td>
             <td>no</td>
-            <td>If your app consists a lot of HTML you are encouraged to outsource it. Add placeholders to your template file <em>appname.html</em> and use <code>str_replace</code> in <em>app.php</em> to render the actual app content. Afterwards call <code>\$this->addContent()</code> in <em>app.php</em> with the rendered template as the parameter.</td>
+            <td>If your app consists a lot of HTML you are encouraged to outsource it. Add placeholders to your template file <em>appname.html</em> and use <code>str_replace</code> in <em>app.php</em> to render the actual app content. Afterwards call <code>$this->addContent()</code> in <em>app.php</em> with the rendered template as the parameter.</td>
         </tr>
         </tbody>
         <tfoot>
